...
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DzF-Lh-Xw6">
                    <rect key="frame" x="-9" y="300" width="138" height="60"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="challengesButtonID"/>
                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="21"/>
                    <state key="normal" title="Challenges">
                        <color key="titleColor" red="0.0019415960409999999" green="0.094649694859999994" blue="0.69839686160000003" alpha="0.75684931509999998" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="btnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="ugX-NK-6Zn"/>
...
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="homeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Alf-9W-K1Z">
                    <rect key="frame" x="29" y="89" width="62" height="62"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                </imageView>
            </subviews>
            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
            <accessibility key="accessibilityConfiguration" identifier="menuViewID"/>
            <connections>
                <outlet property="challengeBtn" destination="DzF-Lh-Xw6" id="a4N-e4-XYA"/>
                <outlet property="clientBtn" destination="YZT-6u-cDX" id="KaE-Ym-kO1"/>
                <outlet property="homeBtn" destination="1pl-4H-5a3" id="ryu-8y-Mby"/>
                <outlet property="logoutBtn" destination="ET5-8a-P6H" id="1hb-wg-6yE"/>
                <outlet property="notificationLabel" destination="2i1-hf-GYS" id="8lU-f6-U4Y"/>
...
