...
      let tempBool = UserDefaults.standard.object(forKey: "newUser") as! Bool
      if tempBool == true{
         //must be called once //add user info
         DBService.shared.initializeData()
         UserDefaults.standard.set(false, forKey: "newUser")
      }
      menuBtnOutlet.accessibilityIdentifier = "menuButton"
      let barButtonItem = self.navigationItem.rightBarButtonItem!
      buttonItemView = barButtonItem.value(forKey: "view")
      
      user = FIRAuth.auth()?.currentUser
      ref = FIRDatabase.database().reference()
      
...
